examples/test/testpolicy16707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16707
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key20: value37
      key35: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value49
          key42: value10
          key23: value14
      podSelector:
        matchLabels:
          key5: value46
